# qtraytracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: BVH.h  Camera.h  Constants.h  DielectricMaterial.h  DiffuseMaterial.h  EmissionMaterial.h  Hitable.h  Material.h  MetalMaterial.h  PerspectiveCamera.h  Ray.h  RayTracer.h  RayTracerDrawable.h  RayTracerWidget.h  RayTracerWindow.h  Scene.h  SphereHitable.h  TriangleHitable.h  TriangleMeshHitable.h  Utils.h
res/: RayTracer.qrc
src/: BVH.cpp  DielectricMaterial.cpp  DiffuseMaterial.cpp  EmissionMaterial.cpp  MetalMaterial.cpp  PerspectiveCamera.cpp  RayTracer.cpp  RayTracerWidget.cpp  RayTracerWindow.cpp  SphereHitable.cpp  TriangleHitable.cpp  main.cpp
